--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.8"
 pandas = "^1.4.2"
 scikit-learn = "^1.0.2" 
 matplotlib = "^3.5.1"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
