--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^1.4.2"
 scikit-learn = "^1.0.2" 
 matplotlib = "^3.5.1"
 jupyter = "^1.0.0"
+seaborn = "0.12.2"
 
 [build-system]
 requires = ["poetry-core"]
