--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ scikit-learn = "^1.0.2"
 matplotlib = "^3.5.1"
 jupyter = "^1.0.0"
 seaborn = "0.12.2"
+xgboost = "^1.7.6"
 
 [build-system]
 requires = ["poetry-core"]
